--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@chainlink/contracts": "^0.3.1",
     "@openzeppelin/contracts": "^4.4.1",
     "@pancakeswap/pancake-swap-lib": "0.0.4",
+    "@poanet/solidity-flattener": "^3.0.6",
     "@uniswap/v2-periphery": "^1.1.0-beta.0"
   }
 }
